--- a/templates/detail.html
+++ b/templates/detail.html
@@ -11,6 +11,7 @@
     </a>
     <hr/>
     <h2>Comments</h2>
+    {% if user.is_authenticated %}
     <div class="form-content" style="margin-top: 20px; padding-bottom: 30px; margin-left: 50px; margin-right: 200px ">
         <form action="/news/{{ news_detail.id }}/" method="post">
             {% csrf_token %}
@@ -25,6 +26,7 @@
 
         </form>
     </div>
+    {% endif %}
     {% for i in comments %}
         <p>{{ i.text }}</p>
         <p>{{ i.author }}</p>
