--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/news/">
             <img src="{% static 'images/unnamed.png' %}" alt="Bootstrap" width="30" height="30">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -24,9 +24,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Главная</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/news/">Все новости</a>
 
                     {% for i in categories %}
@@ -34,12 +31,30 @@
                             <a class="nav-link" href="/category/{{ i.id }}/news/">{{ i.title }}</a>
                         </li>
                     {% endfor %}
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/add_news/">Добавить новость</a>
+                    <li>
+                {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/add_news/">Добавить новость</a>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+                    <a class="nav-link" href="/register/">Регистрация</a>
+                <li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout/">Выйти({{ user }})</a>
+                    <li>
+                {% else %}
+                    <li class="nav-item">
+                    <a class="nav-link" href="/login/">Войти</a>
+                <li>
+                {% endif %}
+
+            </ul>
+        <form class="d-flex" role="search" action="/search/" method="get">
+              <input class="form-control me-2" type="search" name="search_word"
+                     placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
         </div>
     </div>
 </nav>
